horizontal scroll working, scrollbar to fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #000;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
